outputs/tsp_constructive-constructive/mcts-ahd/2025-09-23_01-06-18/evaluations/problem_eval-4514921021075042309_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defined path direction, adjusting weights based on tour progress to favor early-stage alignment while later emphasizing detour reduction.}
                                                                                                                                             ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defined path direction, adjusting weights based on tour progress to favor early-stage alignment while later emphasizing detour reduction.}
                                                                                                                                             ^
SyntaxError: unmatched '}'
